base/infra/monitoring/victoriametrics/vmalertmanager/vmalertmanager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmalertmanager-vmcluster-persistent
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/group.name: demo-platform-private
    alb.ingress.kubernetes.io/group.order: "100"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: ${tools_cert_arn}
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
  labels:
    owner: devops
    stream: devops
    env: ${env}
    app: vmalertmanager
    product: observability
    temporary: "false"
    deleteAfter: "false"

spec:
  ingressClassName: alb
  rules:
    - host: vmalertmanager.${private_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmalertmanager-vmcluster-persistent
                port:
                  number: 9093
